--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/picanha.html">Picanha</a></li>
+            <li><a href="recipes/fish-and-chips.html">Fish and chips</a></li>
         </ul>
     </body>
 </html>
