Add style.css, modifying every html to reference it

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes project</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="title">Odin Recipes</h1>
+        <ul class="link">
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/picanha.html">Picanha</a></li>
             <li><a href="recipes/fish-and-chips.html">Fish and chips</a></li>
