--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,18 +4,19 @@
     <head>
         <meta charset="utf-8">
         <title>Lasagna Recipe</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Lasagna</h1>
-        <img src="../images/lasagna.jpg">
-        <h3>This lasagna recipe takes a little work, 
+        <h1 class="title">Lasagna</h1>
+        <img src="../images/lasagna.jpg" class="image">
+        <h3 class="intro">This lasagna recipe takes a little work, 
             but it is so satisfying and filling that it's worth it!</h3>
-        <p>Making lasagna can be time-consuming, but the results are 
+        <h3 class="intro">Making lasagna can be time-consuming, but the results are 
             well worth the wait. You'll find a detailed ingredient 
-            list and step-by-step instructions in the recipe below.</p>
-        <h2>Ingredients</h2>
-        <ul>
+            list and step-by-step instructions in the recipe below.</h3>
+        <h2 class="section">Ingredients</h2>
+        <ul class="ingredient">
             <li>1 pound sweet Italian sausage</li>
             <li>3/4 pound lean ground beef</li>
             <li>1/2 cup minced onion</li>
@@ -36,8 +37,8 @@
             <li>3/4 pound of sliced mozzarella cheese</li>
             <li>16 ounces of ricotta cheese</li>
             <li>1 Egg</li>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="section">Steps</h2>
+        <ol class="step">
             <li>Cook sausage, ground beef, onion, and garlic in a 
                 Dutch oven over medium heat until well browned.</li>
             <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water.</li>
