--- a/recipes/picanha.html
+++ b/recipes/picanha.html
@@ -4,23 +4,24 @@
     <head>
         <meta charset="utf-8">
         <title>Picanha</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Picanha</h1>
-        <img src="../images/picanha.jpg">
-        <h3>The favorite menu entry in a brazilian churrascaria,
+        <h1 class="title">Picanha</h1>
+        <img src="../images/picanha.jpg" class="image">
+        <h3 class="intro">The favorite menu entry in a brazilian churrascaria,
             best served with tomato vinaigrette.</h3>
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="section">Ingredients</h2>
+        <ul class="ingredient">
             <li>3 cloves of garlic, crushed</li>
             <li>1 teaspoon of kosher salt</li>
             <li>1 pound beef top sirloin, trimmed of excess fat</li>
             <li>1/4 cup lemon juice</li>
             <li>1 tablespoon olive oil</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="section">Steps</h2>
+        <ol class="step">
             <li>Mix crushed garlic and salt together in a bowl 
                 until combined into a paste.</li>
             <li>Rub garlic paste onto meat until covered.</li>
