--- a/recipes/fish-and-chips.html
+++ b/recipes/fish-and-chips.html
@@ -4,16 +4,17 @@
     <head>
         <meta charset="utf-8">
         <title>Fish and chips</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Fish and chips</h1>
-        <img src="../images/fish-and-chips.jpg">
-        <h3>You don't have to go to London for delicious fish 
+        <h1 class="title">Fish and chips</h1>
+        <img src="../images/fish-and-chips.jpg" class="image">
+        <h3 class="intro">You don't have to go to London for delicious fish 
             and chips! This pub-worthy recipe will satisfy your 
             next fried food craving.</h3>
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="section">Ingredients</h2>
+        <ul class="ingredient">
             <li>4 large potatoes, peeled and cut into strips</li>
             <li>1 cup all-purpose flour</li>
             <li>1 teaspoon baking powder</li>
@@ -24,8 +25,8 @@
             <li>1 quart vegetable oil for frying</li>
             <li>1 1/2 pounds cod fillets</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="section">Steps</h2>
+        <ol class="step">
             <li>Place sliced potatoes in a medium bowl 
                 and cover with cold water.</li>
             <li>Mix flour, baking powder, salt, and pepper 
